<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for manage categories fragment -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Appbar layout  -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_manage_categories"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/activity_manage_categories_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- List of category arrangement items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listManageCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:listitem="@layout/item_category_management" />

    <!-- Create/Edit button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:enabled="true"
        android:src="@drawable/ic_baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>