...

    <!-- ManageCategoriesActivity -->
    <string name="activity_manage_categories_title">Manage Categories</string>

    <string name="activity_manage_categories_add_category">Add Category</string>

    <string name="activity_manage_categories_delete_dialog_title">Delete Category?</string>
    <string name="activity_manage_categories_delete_dialog_content">
        Do you really want to delete %s? All transactions that use this category will be set to \"To be Budgeted\" and its budgets will be deleted.
    </string>
    <string name="activity_manage_categories_dialog_confirm">Yes</string>
    <string name="activity_manage_categories_dialog_cancel">Cancel</string>

    <string name="activity_manage_categories_discard_dialog_title">Discard Changes?</string>
    <string name="activity_manage_categories_discard_dialog_content">
        Do you really want to discard all changes?
    </string>
    <string name="activity_manage_categories_new_category">New Category</string>

    <!-- AddEditTransactionActivity -->
    <string name="activity_add_edit_transaction_create_transaction">Create Transaction</string>
    <string name="activity_add_edit_transaction_edit_transaction">Edit Transaction</string>

    <string name="activity_add_edit_transaction_delete">Delete</string>
...
