<?xml version="1.0" encoding="utf-8"?>

<!-- Menu for add/edit activity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Add category -->
    <item
        android:id="@+id/addCategory"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/activity_manage_categories_add_category"
        app:showAsAction="always" />

</menu>