<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for adding or editing a category -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Category name -->
    <EditText
        android:id="@+id/etCategory"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/fragment_budget_category_margin"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Category 1" />

    <!-- Done btn -->
    <ImageView
        android:id="@+id/ivDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
