<?xml version="1.0" encoding="utf-8"?><!-- Transaction entry for transactions fragment -->

<!-- Layout representing a budget entry with its available value -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Category name -->
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/fragment_budget_category_margin"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etBudgeted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Category 1" />

    <!-- Budgeted value -->
    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/etBudgeted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_budget_budgeted_margin"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:fontFamily="sans-serif-medium"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:maxLength="11"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="599" />

    <!-- Done btn -->
    <ImageView
        android:id="@+id/ivDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>